<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Профиль</string>
    <string name="textSupport">Написать в поддержку</string>
    <string name="settingsText">Настройки</string>
    <string name="textLeaveAccount">Выйти из аккаунта</string>
    <string name="textYourCourses">Ваши курсы</string>
</resources>