<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:paddingHorizontal="20dp"
    tools:context=".AccountFragment">

    <TextView
        android:id="@+id/tvProifle"
        style="@style/TopBarText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mediumViewHeight"
        android:text="@string/profile"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_shape"
        android:backgroundTint="@color/grayBackground"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvProifle">

        <LinearLayout
            android:id="@+id/tvSupport"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tinyViewHeight"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textSupport"
                android:textColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_forward" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:backgroundTint="#4D555E" />

        <LinearLayout
            android:id="@+id/tvSettings"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tinyViewHeight"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/settingsText"
                android:textColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_forward" />

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="#4D555E" />


        <LinearLayout
            android:id="@+id/tvLeaveAccount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tinyViewHeight"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/textLeaveAccount"
                android:textColor="@color/white" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/arrow_forward" />

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvCourses"
        style="@style/TopBarText"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/mediumViewHeight"
        android:gravity="center"
        android:text="@string/textYourCourses"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lines" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvCourses" />
</androidx.constraintlayout.widget.ConstraintLayout>